Refactor: Update `NewHtcHomeBadger` to use `List.of` instead of `Collections.singletonList`.